--- a/my_app/templates/base.html
+++ b/my_app/templates/base.html
@@ -47,12 +47,11 @@
         </div>
 
         <div class="types">
-            <a href="/category/4/0">Transport</a>
-            <a href="/category/2/0">Travel</a>
-            <a href="/category/5/0">Sports</a>
-            <a href="/category/1/0">Education</a>
-            <a href="/category/3/0">Business</a>
-            <a href="/category/7/0">Entertainment</a>
+            {% if tags %}
+            {% for tag in tags %}
+            <a href="/category/{{tag.id}}/0">{{tag.title}}</a>
+            {% endfor %}
+            {% endif %}
 
             <a href="{% url 'post' %}" class="btn btn-secondary">Make a Post</a>
         </div>
